feat: add `/logger` test endpoint to check the logger, for convenience
